syntax = "proto3";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: FILE
  package_name: "protobuf.pl.edu.agh.wmazur.avs.model.common"
  flat_package: true
};

message Vector3{
    float x = 1;
    float y = 2;
    float z = 3;
}