syntax = "proto3";

import "scalapb/scalapb.proto";
import "Common.proto";

option (scalapb.options) = {
  scope: FILE
  package_name: "protobuf.pl.edu.agh.wmazur.avs.model.intersection"
  flat_package: true
};


message Intersection{
    string id = 1;
    Geometry geometry = 2;
    repeated Vector3 entryPoints = 3;
    repeated Vector3 exitPoints = 4;
}